# genbondhon

./: .gitignore  .monit.yml  REUSE.toml  ReadMe.md  atlas.workspace  check.nim  config.nims  nim.cfg
.reuse/: dep5
genbondhon/: config.nims  genbondhon.nimble
genbondhon/src/: genbondhon.nim
genbondhon/src/genbondhon/: convertutil.nim  currentconfig.nim  langGenerator.nim  parseutil.nim  util.nim  wrapperGenerator.nim  wrapperTranslator.nim
genbondhon/test/: nomuna.nim
genbondhon/tests/: common.nim  nim.cfg  nomuna.nim
genbondhon/tests/C/: tCGen.nim  tCGenDynamic.nim  tCGenStatic.nim  testCode.c
genbondhon/tests/C#/: .gitignore  tCSharpGen.nim
genbondhon/tests/C++/: tCppGen.nim  tCppGenDynamic.nim  tCppGenStatic.nim  testCode.cpp
genbondhon/tests/C++/kirigamiapp1/src/: CMakeLists.txt  datamanager.cpp  datamanager.h  kirigamiapp1application.h  kirigamiapp1config.kcfg  main.cpp
genbondhon/tests/C++/kirigamiapp1/src/qml/: Incrementer.qml  LibTesting.qml  Main.qml
genbondhon/tests/C++/kirigamiapp1/src/settings/: CMakeLists.txt  GeneralPage.qml  KirigamiApp1ConfigurationView.qml
genbondhon/tests/Kotlin/: tKotlinGen.nim
genbondhon/tests/Swift/: tIosGen.nim  tSwiftGen.nim
genbondhon/tests/parsing/: tApiCointainsType.nim  tApiContainsType.nim  tParsePublicApi.nim
genbondhon/tests/ts/: tTypeScriptGen.nim  testCode.ts
src/: genbondhon.nim
src/genbondhon/: convertutil.nim  currentconfig.nim  helperGenerator.nim  parseutil.nim  store.nim  util.nim  wrapperGenerator.nim  wrapperTranslator.nim
src/genbondhon/langs/: base.nim  c.nim  cpp.nim  csharp.nim  kotlin.nim  swift.nim  typescript.nim
tests/: common.nim  nomuna.nim
tests/C/: tCGenDynamic.nim  tCGenStatic.nim  testCode.c
tests/C#/: .gitignore  tCSharpGen.nim
tests/C#/App1/: .csharpierignore  .editorconfig  check.nim
tests/C#/ConsoleApp1/: ConsoleApp1.sln  Program.cs  (+1 more)
tests/C++/: tCppGenDynamic.nim  tCppGenStatic.nim  testCode.cpp
tests/Kotlin/: tKotlinGen.nim
tests/Kotlin/MyApplication1/app/src/main/cpp/: CMakeLists.txt  nomuna.hpp  nomunaJNI.cpp
tests/Swift/: .gitignore  tIosGen.nim  tSwiftGen.nim
tests/parsing/: tApiContainsType.nim  tParsePublicApi.nim
tests/ts/: tTypeScriptGen.nim  testCode.ts
(+281 files in other folders)
